fix(VList): collapse avatar and append slot in rail drawer

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -10,7 +10,7 @@
   display: grid
   flex: none
   grid-template-areas: "prepend content append"
-  grid-template-columns: max-content auto max-content
+  grid-template-columns: max-content 1fr auto
   outline: none
   max-width: 100%
   padding: $list-item-padding
@@ -58,6 +58,11 @@
   &--link
     cursor: pointer
 
+  .v-navigation-drawer--rail:not(.v-navigation-drawer--expand-on-hover) &,
+  .v-navigation-drawer--rail.v-navigation-drawer--expand-on-hover:not(.v-navigation-drawer--is-hovering) &
+    .v-avatar
+      --v-avatar-height: 24px
+
 .v-list-item__prepend
   align-items: center
   align-self: center
@@ -81,9 +86,15 @@
   display: flex
   align-items: center
   grid-area: append
+  overflow: hidden
 
   .v-list-item__spacer
     order: -1
+    transition: 150ms width settings.$standard-easing
+
+    .v-navigation-drawer--rail:not(.v-navigation-drawer--expand-on-hover) &,
+    .v-navigation-drawer--rail.v-navigation-drawer--expand-on-hover:not(.v-navigation-drawer--is-hovering) &
+      width: 0
 
   > .v-badge,
   > .v-icon,
